<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cuny</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="_email">Email Address</string>
    <string name="_password">Password</string>
    <string name="remember">Remember Me</string>
    <string name="fogot">Forgot Password?</string>
    <string name="_register">REGISTER</string>
    <string name="_login">LOGIN</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="_fullname">Full Name</string>
    <string name="_repassword">Retype Password</string>
    <string name="title_activity_activation">ActivationActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="home">HOME</string>
    <string name="_activ_code">Activation Code</string>
    <string name="title_activity_admin">Cuny</string>
    <string name="admin_title">ADMIN</string>
    <string name="title_activity_building">BuildingActivity</string>
    <string name="building_title">BUILDINGS</string>
    <string name="title_activity_resource">ResourceActivity</string>
    <string name="resource_title">RESOURCES</string>
    <string name="title_activity_share_feed_back">ShareFeedBackActivity</string>
    <string name="topic">Type the topic here</string>
    <string name="comment">Type your comment here</string>
    <string name="_topic">Topic</string>
    <string name="_comment">Comments</string>
    <string name="title_activity_change_password">Cuny</string>
    <string name="_oldpass">Old Password</string>
    <string name="_newpass">New Password</string>
    <string name="title_activity_ask_expert">AskExpertActivity</string>
    <string name="askexpert_title">ASK THE EXPERT</string>
    <string name="sharefeedback_title">SHARE THE FEEDBACK</string>
    <string name="question">Type Your Question Here</string>
    <string name="title_activity_browse">Activity</string>
    <string name="title_activity_browse_equipment">Equipment</string>
    <string name="title_activity_browse_resource">BrowseResourceActivity</string>
    <string name="_filtet">Filter By Keyword</string>
    <string name="_hint_type">Type keyword here</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_pdf">PDFActivity</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="title_activity_emicourse_registration">EMICourseRegistrationActivity</string>
    <string name="title_activity_emicourse_register">EMICourseRegister</string>
    <string name="_agency">Agency</string>
    <string name="_phone">Phone Number</string>
    <string name="agencyhint1">Type agency name here</string>
    <string name="phone_hint">Provide mobile phone number</string>
    <string name="email_hint">Enter Email Address</string>
    <string name="title_activity_equipment_library">EquipmentLibraryActivity</string>
    <string name="title_activity_equipment_library_request">EquipmentLibraryRequestActivity</string>
    <string name="_phone_hint">Provide mobile phone</string>
    <string name="_email_hint">Provide email address</string>
    <string name="_company">Company/Projects/Facility</string>
    <string name="_companylib_hint">Provide Company/Projects/Facility</string>
    <string name="_quantity">Quantity</string>
    <string name="_quantitylib_hint">Provide quantity</string>
    <string name="title_activity_search_repository">SearchRepositoryActivity</string>
    <string name="_keyword_search">Keyword Search</string>
    <string name="_type_hint">Type Keywords here</string>
    <string name="_equiupment_cat">Equipment Category</string>
    <string name="type_equipment_cat">Select equipment category</string>
    <string name="_activity">Activity</string>
    <string name="select_activity">Select activity</string>
    <string name="_emi_program">EMI Program</string>
    <string name="_select_emi_prog">Select EMI Program</string>
    <string name="_res_type">Resource Type</string>
    <string name="_res_type_int">Resource type</string>
    <string name="title_activity_resource_type_selector">ResourceTypeSelector</string>
    <string name="title_activity_emiprogram_selector">EMIProgramSelector</string>
    <string name="pass">Enter Password</string>
    <string name="title_activity_add_building">AddBuilding</string>
    <string name="_build_name">Building Name</string>
    <string name="_select_build_name_">Select Building Name</string>
    <string name="_build_type">Building Type</string>
    <string name="select_build_type">Select Building Type</string>
    <string name="_equip_installed">Equipment Installed</string>
    <string name="select_equip_installed">Select Equipment Installed</string>
    <string name="_filterbyzip">Filter By Zipcode</string>
    <string name="_hint_zip">Type Zip Code</string>
    <string name="title_activity_installed_equipment">InstalledEquipmentActivity</string>
    <string name="title_activity_view_building">View</string>
    <string name="title_activity_edit_building">EditBuildingActivity</string>
    <string name="_build_address">Address</string>
    <string name="_build_id">Building ID</string>
    <string name="title_activity_view_alerts">ViewAlerts</string>
    <string name="no_item1">Sorry, The searched item was not found</string>
    <string name="title_activity_review_stats">ReviewStatsActivity</string>
    <string name="title_activity_launch_check_list">LaunchCheckList</string>
    <string name="_checklist">Checklist</string>
    <string name="select_checklist">Select CheckList</string>
    <string name="title_activity_check_list_master">CheckListMaster</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="title_activity_browse_building">BrowseBuildingActivity</string>

</resources>
