<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.asif.cuny.ShareFeedBackActivity">

    <LinearLayout
        android:layout_gravity="center_vertical"
        android:padding="4dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.example.asif.cuny.CustomFonts.CustomTextView
            android:padding="4dp"
            android:text="@string/_topic"
            android:textSize="22sp"
            android:textColor="@color/appcolor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.example.asif.cuny.CustomFonts.CustomEditText
            android:id="@+id/topic_et"
            android:background="@drawable/round"
            android:padding="8dp"
            android:textSize="20sp"
            android:textColor="@color/appcolor"
            android:hint="@string/topic"
            android:layout_width="match_parent"
            android:layout_height="45dp"

            />

        <com.example.asif.cuny.CustomFonts.CustomTextView
            android:padding="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/_comment"
            android:textSize="22sp"
            android:textColor="@color/appcolor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.example.asif.cuny.CustomFonts.CustomEditText
            android:id="@+id/comment_et"
            android:padding="8dp"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:lines="5"
            android:textSize="20sp"
            android:maxLines="10"
            android:textColor="@color/appcolor"
            android:gravity="top|left"
            android:hint="@string/comment"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@drawable/round"
            />



        <LinearLayout

            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/submit"
                    android:id="@+id/submitbtn"
                    android:onClick="SubmitClick"
                    android:layout_width="120dp"
                    android:layout_height="60dp" />

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
