<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.asif.cuny.BrowseResourceActivity">

    <com.example.asif.cuny.CustomFonts.CustomTextView
        android:padding="4dp"
        android:text="@string/_filtet"
        android:textSize="22sp"
        android:textColor="@color/appcolor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.example.asif.cuny.CustomFonts.CustomEditText
        android:id="@+id/filteret"
        android:background="@drawable/round"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/appcolor"
        android:hint="@string/_hint_type"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        />

    <ImageView
        android:src="@drawable/refresh"
        android:id="@+id/filterbtn"
        android:onClick="FilterClick"
        android:layout_gravity="center_horizontal"
        android:layout_width="120dp"
        android:layout_height="60dp" />

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:padding="10dp"
            android:id="@+id/list_browse_resource"
            android:listSelector="@android:color/transparent"
            android:background="@drawable/list_round"
            android:fadingEdge="none"
            android:overScrollMode="never"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        </ListView>
    </LinearLayout>

    <com.example.asif.cuny.CustomFonts.CustomTextView
        android:id="@+id/alertshow"
        android:text="@string/no_item1"
        android:textColor="@color/appcolor"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>
</LinearLayout>
